@@ -1,30 +1,34 @@
 package karabalin.server.repositories;
 
-import karabalin.server.entities.Group;
+import karabalin.server.entities.GroupDTO;
+import karabalin.server.repositories.dbentities.GroupDB;
 import karabalin.server.exceptions.RepositoryException;
 import karabalin.server.repositories.interfaces.IGroupRepository;
 
+import javax.swing.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class GroupRepository implements IGroupRepository {
-    private final Map<Long, Group> groupMap;
+    private final Map<Long, GroupDB> groupMap;
 
     public GroupRepository(DataBase dataBase) {
         this.groupMap = dataBase.groupsTable();
     }
 
     @Override
-    public long add(Group group) {
+    public long add(GroupDTO group) {
         long currentId = !groupMap.isEmpty() ? Collections.max(groupMap.keySet()) + 1 : 1;
-        groupMap.put(currentId, new Group(currentId, group.getName()));
+        groupMap.put(currentId, new GroupDB(group.name()));
         return currentId;
     }
 
     @Override
-    public Long update(Group group) throws RepositoryException {
-        if (groupMap.containsKey(group.getId())) {
-            groupMap.put(group.getId(), group);
-            return group.getId();
+    public Long update(GroupDTO group) throws RepositoryException {
+        Long groupId = group.id();
+        if (groupMap.containsKey(groupId)) {
+            groupMap.put(groupId, new GroupDB(group.name()));
+            return groupId;
         } else {
             return null;
         }
@@ -36,12 +40,17 @@ public class GroupRepository implements IGroupRepository {
     }
 
     @Override
-    public Group getById(long id) {
-        return groupMap.getOrDefault(id, null);
+    public GroupDTO getById(long id) {
+        var group = groupMap.getOrDefault(id, null);
+        if (group == null) {
+            return null;
+        } else {
+            return new GroupDTO(id, group.name());
+        }
     }
 
     @Override
-    public List<Group> getAll() {
-        return groupMap.values().stream().toList();
+    public List<GroupDTO> getAll() {
+        return groupMap.entrySet().stream().map(entry -> new GroupDTO(entry.getKey(), entry.getValue().name())).collect(Collectors.toList());
     }
 }
